--- a/src/pages/art.astro
+++ b/src/pages/art.astro
@@ -295,7 +295,7 @@ const art = await fetchAllRaindrops();
       'Mannerism',
       'Neoclassicism',
       'Romanticism',
-      'Ukiyo-e / Rinpa',
+      'Ukiyo-e',
       'Dutch Golden Age',
       'Modernism',
       'Northern Renaissance',
