--- a/src/components/VertTimeline.astro
+++ b/src/components/VertTimeline.astro
@@ -252,6 +252,17 @@ const safeItems = items.map((item, index) => ({
       .vert-timeline__inner {
         max-width: 780px;
       }
+
+      /* ADD THIS HERE ↓↓↓ */
+      .vert-timeline__content,
+      .vert-timeline__description,
+      .vert-timeline__bullets li {
+        font-weight: 500;
+      }
+    
+      .vert-timeline__title-item {
+        font-weight: 650;
+      }
     }
   </style>
 </section>
