--- a/src/pages/stats.astro
+++ b/src/pages/stats.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
+import StatsGraphs from '../components/StatsGraphs.astro';
 
 const stats = [
   {
@@ -86,6 +87,8 @@ const projects = [
         ))}
       </div>
     </section>
+    
+    <StatsGraphs />
 
     <section class="section" aria-labelledby="prohibitions-heading">
       <h2 id="prohibitions-heading">🚫 Prohibitions</h2>
